# soul-mind

./: .env.example  .gitignore  Makefile  docker-compose.yml
backend/: Dockerfile  data.json  main.py  media.json  pyproject.toml  scripts.py
backend/assets/documents/: privacy_policy.docx  public_offer.docx
backend/backend/: settings.py
backend/bot/: calculations.py  filters.py  loader.py  lunar_nodes.py  media.json  middlewares.py  numerology.py  pdf.py  push_messages.py  schemas.py  settings.py  states.py  tags.py  tests.py  text_utils.py
backend/bot/api/: astrology.py  base.py  geocoding.py  humandesign.py  soul_muse.py  speechkit.py  telegraphyx.py  yookassa.py
backend/bot/handlers/: answer_consult.py  commands.py  compatability_energy.py  consults_list.py  destiny_guide.py  experts.py  friday_gift.py  invite_friend.py  load_media.py  menu.py  month_with_soul_muse.py  personal_account.py  personal_analysis.py  personal_day.py  premium_space.py  quests.py  registration.py  soul_muse_question.py  subscribe.py  support.py  tests.py  universe_advice.py  vip_services.py  weekly_quests.py
backend/bot/keyboards/: inline.py  reply.py  utils.py
backend/bot/prompts/: answer_question.py  categorize_question.py  month_forecast.py  personal_report.py  vip_compatability.py
backend/bot/services/: compatability_energy.py  lunar_nodes.py  month_with_soul_muse.py  numerology.py  quests.py  (+4 more)
backend/core/: admin.py  apps.py  choices.py  filters.py  managers.py  mixins.py  models.py  tasks.py
backend/fixtures/: expert_types.json  quest_tags.json  quests.json  topics.json
(+89 files in other folders)
