[project]
name = "soul-mind"
version = "0.1.0"
description = "Telegram bot for self-discovery"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.19.0",
    "celery>=5.5.1",
    "django>=5.2",
    "environs>=14.1.1",
    "gunicorn>=23.0.0",
    "multidict>=6.2.0",
    "redis>=5.2.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.4",
]

[tool.ruff]
line-length = 79
target-version = "py311"
src = ["."]
extend-exclude = ["migrations"]
lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "COM812",  # trailing comma
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
